adjust mobile font size; fix badge pos on mobile

--- a/src/app/components/Search/playercard.scss
+++ b/src/app/components/Search/playercard.scss
@@ -123,9 +123,11 @@
 		}
 	}
 	&.player-1b50085a-8a20-4ce6-b75f-db6a00e4d718:after {
-			content: "Frontend Dude";
-			position: absolute;
-			left: $l*2 + 64px;
-			font-size: 0.7em;
+			@include large{
+				content: "Frontend Dude";
+				position: absolute;
+				left: $l*2 + 64px;
+				font-size: 0.7em;
+			}
 	}
 }
